tests/paczka1/fuzzy1/94854232.err
Error in line 1: A235 S777 6,3
Error in line 2: UTEFUX4pq A382 63,6
Error in line 4: UTEFUX4pq S618 75,5
Error in line 8: UTEFUX4pq A235 13,6
